docs/examples/tracepkt/01-workload.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tracepkt-demo
---
apiVersion: v1
kind: Pod
metadata:
  name: hello
  namespace: tracepkt-demo
  labels:
    role: demo
spec:
  containers:
  - name: hello
    image: busybox
    command: [ "sleep", "100000" ]
